--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "PRINCE-BOT",
-  "description": "Prince MD A WhatsApp User BOT",
-  "logo": "https://telegra.ph/file/d9bcfd1ae673ebd58bd3e.jpg",
+  "name": "𝐂𝚫𝚻 𝐒𝚸𝐘",
+  "description": "𝐂𝚫𝚻 𝐒𝚸𝐘 A WhatsApp User BOT",
+  "logo": "https://telegra.ph/file/b860bb0ea2ed03e0ebd56.jpg",
   "keywords": ["java", "bot", "whatsapp-bot", "whatsapp-automation"],
   "repository": "https://github.com/PRINCE-GDS/THE-PRINCE-BOT",
   
