--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 { 
-    "name": "prince bot",
+    "name": "𝐂𝚫𝚻 𝐒𝚸𝐘",
     "version": "2.0.0",
     "description": "Advanced WhatsApp Bot",
     "main": "index.js",
